# yaware-test

./: .gitignore  CMakeLists.txt  IDbBase.h  ImageInfoItem.qml  ImageModel.qml  README.md  READМE.md  REAMDE.md  controller.cpp  controller.h  main.cpp  main.qml  qml.qrc  screenshot.h  screenshotsdbbase.cpp  screenshotsdbbase.h  screenshotslist.cpp  screenshotslist.h  screenshotsmodel.cpp  screenshotsmodel.h  sqlitescreenshotsdb.cpp  sqlitescreenshotsdb.h
